--- a/src/app/admin/components/features/feature-update/feature-update.component.html
+++ b/src/app/admin/components/features/feature-update/feature-update.component.html
@@ -24,7 +24,7 @@
               </mat-select>
             </mat-form-field>
             <button mat-icon-button color="warn" (click)="removeFeatureValueControl(i)" *ngIf="featureValues.length > 1">
-              <mat-icon>remove_circle</mat-icon>
+              <mat-icon id="deleteIcon" >remove_circle</mat-icon>
             </button>
           </div>
         </div>
