--- a/src/app/admin/components/products/product-create/product-create.component.html
+++ b/src/app/admin/components/products/product-create/product-create.component.html
@@ -139,11 +139,54 @@
             </mat-checkbox>
           </td>
         </ng-container>
+
+        <ng-container matColumnDef="images">
+          <th mat-header-cell *matHeaderCellDef> Fotoğraflar </th>
+          <td mat-cell *matCellDef="let variant; let i = index">
+            <div class="image-carousel">
+              <mat-card class="carousel-card">
+                <mat-card-content>
+                  <div *ngIf="variant.get('images').value.length > 0; else noImages" class="carousel-container">
+                    <img [src]="variant.get('images').value[currentImageIndex[variantIds[i]]] | safeUrl" 
+                         [alt]="'Ürün ' + (currentImageIndex[variant.get('sku').value] + 1)" 
+                         class="carousel-image">
+                    <div class="carousel-controls">
+                      <button mat-icon-button type="button" (click)="prevImage(variant, $event,i)" [disabled]="currentImageIndex[variantIds[i]] === 0">
+                        <mat-icon>chevron_left</mat-icon>
+                      </button>
+                      <span class="image-counter">
+                        {{ currentImageIndex[variantIds[i]] + 1 }} / {{ variant.get('images').value.length }}
+                      </span>
+                      <button mat-icon-button type="button" (click)="nextImage(variant, $event, i)" [disabled]="currentImageIndex[variantIds[i]] === variant.get('images').value.length - 1">
+                        <mat-icon>chevron_right</mat-icon>
+                      </button>
+                    </div>
+                  </div>
+                  <ng-template #noImages>
+                    <div class="no-images">
+                      <mat-icon>image</mat-icon>
+                      <span>Fotoğraf Yok</span>
+                    </div>
+                  </ng-template>
+                </mat-card-content>
+                <mat-card-actions>
+                  <button mat-button type="button" color="primary" (click)="openImageUploadDialog(variant, $event)">
+                    <mat-icon>add_photo_alternate</mat-icon> 
+                  </button>
+                  <button mat-button type="button" color="warn" (click)="removeCurrentImage(variant, $event,i)" [disabled]="variant.get('images').value.length === 0">
+                    <mat-icon>delete</mat-icon>
+                  </button>
+                </mat-card-actions>
+              </mat-card>
+            </div>
+          </td>
+        </ng-container>
     
         <ng-container matColumnDef="combination">
           <th mat-header-cell *matHeaderCellDef> Varyantlar </th>
           <td mat-cell *matCellDef="let variant"> {{variant.get('combination').value}} </td>
         </ng-container>
+
     
         <ng-container matColumnDef="price">
           <th mat-header-cell *matHeaderCellDef> Fiyat </th>
