--- a/src/app/admin/components/products/product-update/product-update.component.scss
+++ b/src/app/admin/components/products/product-update/product-update.component.scss
@@ -1,4 +1,16 @@
-.product-create-container {
+@media (max-width: 600px) {
+  .image-card {
+    width: calc(50% - 8px); // 2 sütun
+  }
+}
+
+@media (min-width: 601px) and (max-width: 1024px) {
+  .image-card {
+    width: calc(33.333% - 11px); // 3 sütun
+  }
+}
+
+.product-update-container {
   max-width: 1200px;
   margin: 0 auto;
   padding: 2rem;
@@ -63,7 +75,8 @@
       border-collapse: separate;
       border-spacing: 0;
 
-      th, td {
+      th,
+      td {
         text-align: center;
         vertical-align: middle;
       }
@@ -97,34 +110,30 @@
     padding: 0.75rem 2rem;
     font-size: 1.1rem;
   }
-  
+
   .mat-select-search-inner {
     height: auto;
     width: 100%;
   }
-  
+
   .mat-tree {
     padding: 8px;
   }
-    
-    .mat-tree-node {
-      min-height: 36px;
-    }
-    
+
+  .mat-tree-node {
+    min-height: 36px;
+  }
 }
-
-
 
 ::ng-deep {
-    .mat-select-panel {
-      max-height: none !important;
-    }
+  .mat-select-panel {
+    max-height: none !important;
+  }
 }
 
-
 /* ::ng-deep .mat-mdc-button-persistent-ripple::before {
-  background-color: #ba1a1a !important;
-} */
+    background-color: #ba1a1a !important;
+  } */
 
 .image-carousel {
   width: 150px;
@@ -179,9 +188,8 @@ mat-card-actions {
   justify-content: space-between;
 }
 
-.mat-mdc-card-content{
+.mat-mdc-card-content {
   padding: 6px !important;
-
 }
 
 .compact-icon-button {
@@ -194,6 +202,53 @@ mat-card-actions {
     width: 18px;
     height: 18px;
     line-height: 18px;
-    
   }
+}
+
+.image-gallery {
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 16px;
+  margin-bottom: 16px;
+}
+
+.image-card {
+  width: 150px;
+  margin-bottom: 16px;
+}
+
+.product-image {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+}
+
+.mat-mdc-row:hover {
+  background-color: #f5f5f5;
+}
+
+.mat-column-photo {
+  width: 60px;
+  padding-right: 8px;
+}
+
+.mat-column-name,
+.mat-column-sku,
+.mat-column-categoryName,
+.mat-column-brandName {
+  min-width: 100px;
+}
+
+.mat-column-price,
+.mat-column-stock {
+  min-width: 80px;
+}
+
+.mat-column-features {
+  min-width: 200px;
+}
+
+.mat-mdc-table {
+  width: 100%;
+  overflow-x: auto;
 }
