--- a/src/app/directives/admin/delete-directive/delete-directive.component.html
+++ b/src/app/directives/admin/delete-directive/delete-directive.component.html
@@ -1,3 +1,3 @@
-<button mat-mini-fab (click)="onClick()" class="delete-button">
+<button mat-mini-fab class="delete-button">
    <mat-icon>delete</mat-icon>
 </button>
