--- a/src/app/admin/components/products/product-list/product-list.component.html
+++ b/src/app/admin/components/products/product-list/product-list.component.html
@@ -24,11 +24,34 @@
             <th mat-header-cell *matHeaderCellDef class="header-cell">No</th>
             <td mat-cell *matCellDef="let item; let i = index">{{ (currentPageNo - 1) * pageSize + i + 1 }}</td>
           </ng-container>
+
+          <ng-container matColumnDef="Image">
+            <th mat-header-cell *matHeaderCellDef class="header-cell">Resim</th>
+            <td mat-cell *matCellDef="let item">
+              <img *ngIf="item.showcaseImage" [src]="item.showcaseImage.url" [alt]="item.name" class="product-image">
+              <span *ngIf="!item.showcaseImage">No Image</span>
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="Feature">
+            <th mat-header-cell *matHeaderCellDef class="header-cell">Özellik</th>
+            <td mat-cell *matCellDef="let item">
+              <div *ngFor="let feature of item.productFeatureValues">
+                {{ feature.featureValueName }}
+              </div>
+            </td>
+          </ng-container>
   
           <ng-container matColumnDef="Product">
-            <th mat-header-cell *matHeaderCellDef class="header-cell">Özellik Adı</th>
+            <th mat-header-cell *matHeaderCellDef class="header-cell">Ürün Adı</th>
             <td mat-cell *matCellDef="let item">{{ item.name }}</td>
           </ng-container>
+
+          <ng-container matColumnDef="VariantID">
+            <th mat-header-cell *matHeaderCellDef class="header-cell">Varyant ID</th>
+            <td mat-cell *matCellDef="let item">{{ item.varyantGroupID }}</td>
+          </ng-container>
+
 
           <ng-container matColumnDef="Update">
             <th mat-header-cell *matHeaderCellDef class="header-cell">Güncelle</th>
