--- a/src/app/ui/components/main-header/main-header.component.scss
+++ b/src/app/ui/components/main-header/main-header.component.scss
@@ -1,126 +1,327 @@
 $primary-color: #e53935;
 $secondary-color: #212121;
 $background-color: #ffffff;
-$text-color: #333333;
+$text-color: rgb(75, 85, 101);
 $border-color: #e0e0e0;
+$hover-color: rgba($primary-color, 0.1);
 
-.site-header {
-  background-color: $background-color;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  padding: 1rem 0;
 
-  .header-container {
-    max-width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
+.row {
+  --bs-gutter-x: 0rem;
+  text-align: center;
+  line-height: 1.2;
+  font-weight: 500;
+}
+#header-div{
+  padding-left: 0;
+  padding-right: 0;
+}
+.container{
+  margin: 0 auto;
+  width: 1200px;
+  padding: 0;
+}
 
-  .logo {
-    img {
-      height: 40px;
-    }
-  }
 
-  .category-nav {
-    ul {
-      display: flex;
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
+.mini {
+  font-size: 2.2rem;
+  font-weight: 700;
+}
+.e-ticaret {
+  font-size: 1.2rem;
+  font-weight: 700;
+}
 
-      li {
-        margin-right: 1.5rem;
+.bg-body-tertiary {
+  --bs-bg-opacity: 1;
+  background-color: #ffffff !important;
+}
+.navbar {
+  height: 100px;
+  //border-bottom: 2px solid rgb(208, 204, 204);
+  background-color: #ffffff;
+  display: flex;
+  margin: auto;
+  margin-left: 100px;
+  margin-right: 10px;
+  --bs-navbar-brand-margin-end: 3rem;
+}
+/* .navbar-nav {
+  margin-right: 10px;
+} */
+.d-flex {
+  display: flex;
+}
+.d-flex input {
+  width: 400px;
+  height: 35px;
+  border-radius: 7px;
+  padding-left: 20px;
+}
+.d-flex button {
+  height: 35px;
+  line-height: 1;
+}
 
-        a {
-          color: $text-color;
-          text-decoration: none;
-          font-weight: 500;
-          transition: color 0.3s ease;
+.dropdown-menu {
+  --bs-dropdown-font-size: 13px;
+  --bs-dropdown-padding-x: 1;
+  
+}
+.dropdown-menu.show{
+  margin-left: -35px;
+  border-radius: 10px;
+  background-color: #ffffff;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
 
-          &:hover {
-            color: $primary-color;
-          }
-        }
-      }
-    }
-  }
 
-  .search-bar {
-    display: flex;
-    align-items: center;
 
-    input {
-      padding: 0.5rem;
-      border: 1px solid $border-color;
-      border-right: none;
-      border-radius: 4px 0 0 4px;
-      outline: none;
-    }
+.form-control-dark {
+  border-color: var(--bs-gray);
+}
+.form-control-dark:focus {
+  border-color: #fff;
+  box-shadow: 0 0 0 0.25rem rgba(255, 255, 255, 0.25);
+}
 
-    button {
-      background-color: $primary-color;
-      color: $background-color;
-      border: none;
-      padding: 0.5rem 1rem;
-      border-radius: 0 4px 4px 0;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
+.text-small {
+  font-size: 95%;
+}
 
-      &:hover {
-        background-color: darken($primary-color, 10%);
-      }
-    }
-  }
+.dropdown-toggle:not(:focus) {
+  outline: 0;
+}
 
-  .user-actions {
-    display: flex;
-    align-items: center;
+.nav {
+  --bs-nav-link-padding-x: 1rem;
+}
+.nav-link {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  --bs-nav-link-color: #707070;
+  --bs-nav-link-hover-color: #dd5114;
+}
 
-    .account-link, .cart-link {
-      display: flex;
-      align-items: center;
-      color: $text-color;
-      text-decoration: none;
-      margin-left: 1.5rem;
-      transition: color 0.3s ease;
+.nav-link svg {
+  width: 2em;
+  height: 2em;
+  margin-top: 0.25rem;
+  margin-bottom: 4px;
+}
 
-      &:hover {
-        color: $primary-color;
-      }
+#sign-in-dropdown {
+  color: rgb(255, 102, 0);
+}
+#sign-in-dropdown:hover {
+  color: rgb(194, 78, 1);
+}
 
-      i {
-        margin-right: 0.5rem;
-      }
-    }
+#register {
+  padding: 0;
+  margin-left: 25px;
+  line-height: 1.5;
+  margin-top: 5px;
+  display: flex;
+  flex-direction: row;
+}
+#login {
+  color: #ff6600;
+}
+#login:hover {
+  color: #c24e01;
+}
 
-    .cart-count {
-      background-color: $primary-color;
-      color: $background-color;
-      border-radius: 50%;
-      padding: 0.2rem 0.5rem;
-      font-size: 0.8rem;
-      margin-left: 0.5rem;
-    }
+#cartbutton {
+  color: #ff6600;
+}
+
+#cartbutton:hover {
+  color: #c24e01;
+}
+
+.nav-link #signoutsvg {
+  color: #dc3545;
+}
+.nav-link #signouttext {
+  color: #dc3545;
+}
+
+.registertext {
+  margin-left: 4px;
+}
+
+.logintext {
+  margin-left: 4px;
+}
+
+#searchbox {
+  position: relative;
+  border-right: none;
+  --bs-border-width: 1px;
+}
+
+#searchbox input.form-control:focus,
+#searchbox button.btn:focus {
+  outline: none;
+  box-shadow: 0 0 0 3px rgba(253, 106, 13, 0.316);
+  border-color: #ff6600;
+}
+
+#searchbox input.form-control:focus + button.btn {
+  box-shadow: 0 0 0 3px #fd6a0d51;
+}
+
+#searchbox input.form-control,
+#searchbox button.btn {
+  transition: box-shadow 0.3s ease;
+  border-right: none;
+}
+
+#searchbox button.btn {
+  background-color: #ff6600;
+  border-color: #ff6600;
+  color: white;
+  border-left: none;
+}
+
+.containerFullWidth {
+  width: 100%;
+}
+
+.navigation-1 {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background-color: #f6f3ef;
+}
+
+.menuItems-1 {
+  width: 1200px;
+  display: flex;
+  justify-content: center;
+}
+
+.menuItems-3 {
+  display: flex;
+  align-items: center;
+  height: 56px;
+  cursor: default;
+  z-index: 1;
+}
+.menuItems-3:hover {
+  background-color: #ffffff;
+}
+
+.menuItems-4 {
+  position: relative;
+  color: #646464;
+}
+
+.menuItems-4 span {
+  width: 100%;
+  display: block;
+  padding: 0 22px;
+  font-size: 14px;
+  font-family: -apple-system, BlinkMacSystemFont, Arial, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif !important;
+  font-weight: 600;
+  text-align: center;
+  line-height: 1.2;
+  letter-spacing: -.28px;
+}
+
+.menuItems-5 {
+  visibility: hidden;
+  position: absolute;
+  top: 56px;
+  background-color: #ffffff;
+}
+
+.childMenuItems-3 ul {
+  display: flex;
+  flex-wrap: wrap;
+}
+.menuItems-2{
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+.separator {
+  width: 1px;
+  height: 24px;
+  top: 50%;
+  background-color: #bebebe83;
+  margin: 0; /* İsteğe bağlı olarak sağ ve sol boşluk ekleyebilirsiniz */
+  display: inline-block;
+}
+
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  pointer-events: none;
+}
+.overlay.show {
+  opacity: 1;
+  pointer-events: auto;
+}
+.childMenuItems-5 {
+  text-decoration: none;
+  color: #ff6600 ;
+  cursor: pointer;
+}
+.childMenuItems-6 {
+  text-decoration: none;
+  color: #646464 ;
+  cursor: pointer;
+}
+
+.translate-middle{
+  transform: translate(50%, -50%) !important;
+}
+.bg-danger{
+  background-color: #ff6600 !important;
+}
+.badge{
+  font-size: 11px !important;
+  font-weight: 500;
+}
+
+.card-body {
+  display: none; // Tüm card-body'leri başlangıçta gizle
+  position: absolute; // Bağımsız bir katman olarak ayarla
+  z-index: -1; // Diğer öğelerin altında açılacak
+
+  h5,
+  p,
+  a {
+    visibility: hidden; // Diğer içeriği gizle
   }
 }
 
-@media (max-width: 768px) {
-  .site-header {
-    .header-container {
-      flex-wrap: wrap;
-      justify-content: center;
-      padding: 0 1rem;
-    }
+.card-body.show {
+  display: block; // Sadece aktif kategoriye ait card-body'yi göster
+  z-index: 1; // Diğer öğelerin üzerinde açılacak
+  background-color: #fff;
+  right: 0px !important;
+  left: 0px !important;
+  top: 46px !important;
 
-    .logo, .category-nav, .search-bar, .user-actions {
-      margin-bottom: 1rem;
-    }
-
-    .category-nav ul {
-      flex-wrap: wrap;
-      justify-content: center;
-    }
+  h5,
+  p,
+  a {
+    visibility: visible; // Sadece aktif içeriği göster
   }
 }
