--- a/src/app/ui/components/main-header/main-header.component.html
+++ b/src/app/ui/components/main-header/main-header.component.html
@@ -1,9 +1,9 @@
 <div class="py-2 text-bg-white" id="header-div">
   <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-          <a class="navbar-brand" routerLink="" style="font-size: xx-large;">
+          <a class="navbar-brand" routerLink="">
               <div class="gradient">
-                  <img src="../../../../assets/tum_trading_logo.png" alt="" style="width: 130px;">
+                  <img src="../../../../assets/WhatsApp Image 2024-08-14 at 17.39.44.jpeg" alt="" style="width: 300px;">
               </div>
           </a>
           <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
