--- a/src/app/ui/components/navbar/navbar.component.scss
+++ b/src/app/ui/components/navbar/navbar.component.scss
@@ -1,14 +1,15 @@
 .industrial-navbar {
   font-family: Arial, sans-serif;
-  font-size: 16px;
+  font-size: 14px;
 
   .top-bar {
-    background-color: #333;
+    background-color: #424242;
     color: white;
     display: flex;
     justify-content: space-between;
-    align-items: stretch; // Değiştirdim: çocuk öğelerin yüksekliği eşit olsun
-    padding: 0 20px; // Üst ve alt padding'i kaldırdım
+    align-items: center;
+    padding-right: 20px;
+    height: 64px;
 
     .all-products-dropdown {
       button {
@@ -17,10 +18,10 @@
         border: none;
         padding: 0 15px;
         cursor: pointer;
-        font-size: 18px;
-        height: 64px; // Butonun yüksekliğini %100 yaptım
+        font-size: 1.2rem;
+        height: 64px;
         display: flex;
-        align-items: center; // Dikey hizalama için
+        align-items: center;
 
         .dropdown-arrow {
           margin-left: 5px;
@@ -41,14 +42,14 @@
       flex-grow: 1;
       margin: 0 20px;
       display: flex;
-      align-items: center; // Dikey hizalama için
+      align-items: center;
 
       input {
         flex-grow: 1;
         padding: 10px;
         border: none;
-        font-size: 16px;
-        height: 40px; // Sabit bir yükseklik verdim
+        font-size: 14px;
+        height: 40px;
       }
 
       .search-button {
@@ -56,178 +57,230 @@
         border: none;
         padding: 0 15px;
         cursor: pointer;
-        height: 40px; // Input ile aynı yükseklikte
+        height: 40px;
         display: flex;
-        align-items: center; // Dikey hizalama için
+        align-items: center;
       }
     }
 
-    .right-menu {
-      display: flex;
-      align-items: center;
-
-      a {
-        color: white;
-        text-decoration: none;
-        margin-left: 20px;
-        font-size: 18px; // Menü öğeleri yazı boyutunu artırdım
-      }
-
-      .cart {
-        position: relative;
-
-        .cart-count {
-          position: absolute;
-          top: -8px;
-          right: -8px;
-          background-color: red;
-          color: white;
-          border-radius: 50%;
-          padding: 2px 6px;
-          font-size: 14px;
-        }
-      }
-    }
+    
   }
 
-  .main-content {
-    display: flex;
-    background-color: #f1f1f1;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.3s ease-out;
+  .dropdown-overlay {
+    position: fixed;
+    top: 210px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(5px);
+    display: none;
+    z-index: 1000;
+    --bs-gutter-x: 19rem !important;
+    --bs-gutter-y: 0;
 
     &.open {
-      max-height: 1000px; // Adjust this value based on your content
+      display: block;
     }
 
-    .categories-list {
-      width: 300px; // Genişliği artırdım
-      background-color: #000;
-      color: white;
-      padding: 20px;
-
-      h3 {
-        margin-bottom: 20px;
-        font-size: 24px; // Başlık yazı boyutunu artırdım
-      }
-
-      ul {
-        list-style-type: none;
-        padding: 0;
-
-        li {
-          padding: 10px 0;
-          cursor: pointer;
-          font-size: 18px; // Liste öğeleri yazı boyutunu artırdım
-
-          &:hover, &.active {
-            color: #4CAF50;
-          }
-        }
-      }
-    }
-    .subcategories {
-      padding: 20px;
-      width: 350px; // Sabit genişlik atadım
-    }
-    .recommended-products {
-      padding: 20px;
-      width: 900px; // Sabit genişlik atadım
-    }
-
-    .subcategory-header, .recommended-header {
+    .main-content {
       display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 20px;
+      background-color: white;
+      max-height: 600px;
+      overflow-y: auto;
 
-      h2 {
-        margin: 0;
-        font-size: 28px; // Başlık yazı boyutunu artırdım
-      }
+      .categories-list {
+        padding-top: 25px;
+        width: 310px;
+        background-color: rgba(0, 0, 0, 0.8);
+        color: white;
 
-      .view-all {
-        color: #0066cc;
-        text-decoration: none;
-        font-size: 18px; // "View All" yazı boyutunu artırdım
-      }
-    }
 
-    .subcategories {
-      ul {
-        list-style-type: none;
-        padding: 0;
-
-        li {
-          padding: 10px 0;
+        h3 {
+          margin-bottom: 20px;
+          font-size: 8px;
           font-weight: bold;
-          font-size: 20px; // Alt kategori yazı boyutunu artırdım
+        }
 
-          .nested-subcategories {
-            padding-left: 20px;
-            margin-top: 10px;
+        ul {
+          list-style-type: none;
+          padding: 0;
 
-            li {
-              font-weight: normal;
-              font-size: 18px; // İç içe alt kategori yazı boyutunu artırdım
-              color: #666;
+          li {
+            padding: 10px 20px;
+            cursor: pointer;
+            font-size: 1rem;
+
+            &:hover, &.active {
+              background-image: linear-gradient(to bottom, rgba(12, 108, 212, 0), rgba(35, 41, 50, .15) 37%), linear-gradient(to bottom, #e53935, #e53935);
+              color: white;
             }
           }
         }
       }
-    }
 
-    .product-grid {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 20px;
+      .subcategories {
+        background-color: #ebebeb;
+        padding-right: 20px;
+        width: 310px;
 
-      .product-item {
-        background-color: white;
-        padding: 20px;
-        display: flex;
+        .subcategory-header {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          padding: 20px 20px 20px 0px;
+          margin-bottom: 10px;
 
-        img {
-          width: 120px; // Ürün resmi boyutunu artırdım
-          height: 120px;
-          object-fit: contain;
-          margin-right: 20px;
-        }
-
-        .product-info {
-          h3, h4 {
-            margin: 0 0 10px 0;
-            font-size: 20px; // Ürün başlığı yazı boyutunu artırdım
-          }
-
-          p {
-            font-size: 16px; // Ürün açıklaması yazı boyutunu artırdım
-          }
-
-          .stock-status {
-            color: red;
-            font-size: 18px; // Stok durumu yazı boyutunu artırdım
-
-            &.in-stock {
-              color: green;
-            }
-          }
-
-          .price {
+          h3 {
+            margin: 0;
+            font-size: 1.5rem;
             font-weight: bold;
-            font-size: 22px; // Fiyat yazı boyutunu artırdım
+            position: relative;
+            left: 20px;
 
-            span {
-              font-weight: normal;
-              font-size: 18px;
+            &::after { // Eklendi
+              content: '';
+              position: absolute;
+              bottom: -8px; // Yazının altında 8px boşluk bırakır
+              left: 0;
+              width: 100px;
+              height: 4px;
+              background-image: linear-gradient(to bottom, rgba(12, 108, 212, 0), rgba(35, 41, 50, .15) 37%), linear-gradient(to bottom, #0066cc, #0066cc);
             }
           }
 
-          .sign-in {
+          .view-all {
             color: #0066cc;
             text-decoration: none;
-            font-size: 18px; // "Sign in" yazı boyutunu artırdım
+            font-size: 14px;
+          }
+        }
+
+        ul {
+          list-style-type: none;
+          padding: 0;
+
+          li {
+            padding: 5px 20px;
+            font-size: 1rem;
+            cursor: pointer;
+
+            &:hover, &.active {
+              color: #e53935;
+            }
+
+            .nested-subcategories {
+              padding-left: 20px;
+              margin-top: 5px;
+
+              li {
+                font-size: 0.9rem;
+                color: #666;
+
+                &:hover {
+                  color: #e53935;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      .recommended-products {
+        padding:0px 20px 0px 20px;
+        flex-grow: 1;
+
+        .recommended-header {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          padding: 20px 20px 20px 0px;
+          margin-bottom: 10px;
+
+          h3 {
+            margin: 0;
+            font-size: 1.5rem;
+            font-weight: bold;
+            position: relative;
+
+            &::after { // Eklendi
+              content: '';
+              position: absolute;
+              bottom: -8px; // Yazının altında 8px boşluk bırakır
+              left: 0;
+              width: 100px;
+              height: 4px;
+              background-image: linear-gradient(to bottom, rgba(12, 108, 212, 0), rgba(35, 41, 50, .15) 37%), linear-gradient(to bottom, #0066cc, #0066cc);
+            }
+          }
+
+          .view-all {
+            color: #0066cc;
+            text-decoration: none;
+            font-size: 14px;
+          }
+        }
+
+        .product-grid {
+          display: grid;
+          grid-template-columns: repeat(2, 1fr);
+          gap: 20px;
+
+          .product-item {
+            background-color: white;
+            padding: 15px;
+            display: flex;
+            border: 1px solid #e0e0e0;
+
+            img {
+              width: 100px;
+              height: 100px;
+              object-fit: contain;
+              margin-right: 15px;
+            }
+
+            .product-info {
+              h3 {
+                margin: 0 0 5px 0;
+                font-size: 14px;
+                font-weight: bold;
+              }
+
+              h4 {
+                margin: 0 0 5px 0;
+                font-size: 14px;
+              }
+
+              p {
+                font-size: 12px;
+                margin: 0 0 5px 0;
+              }
+
+              .stock-status {
+                color: red;
+                font-size: 12px;
+
+                &.in-stock {
+                  color: green;
+                }
+              }
+
+              .price {
+                font-weight: bold;
+                font-size: 16px;
+
+                span {
+                  font-weight: normal;
+                  font-size: 12px;
+                }
+              }
+
+              .sign-in {
+                color: #0066cc;
+                text-decoration: none;
+                font-size: 12px;
+              }
+            }
           }
         }
       }
