--- a/src/app/ui/components/navbar/navbar.component.scss
+++ b/src/app/ui/components/navbar/navbar.component.scss
@@ -68,7 +68,7 @@
 
   .dropdown-overlay {
     position: fixed;
-    top: 210px;
+    top: 190px;
     left: 0;
     right: 0;
     bottom: 0;
@@ -91,7 +91,7 @@
 
       .categories-list {
         padding-top: 25px;
-        width: 310px;
+        min-width: 310px;
         background-color: rgba(0, 0, 0, 0.8);
         color: white;
 
@@ -122,7 +122,7 @@
       .subcategories {
         background-color: #ebebeb;
         padding-right: 20px;
-        width: 310px;
+        min-width: 310px;
 
         .subcategory-header {
           display: flex;
